--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Install dependencies
         run: npm install
       - name: Build Typescript
-        run: npm run Build
+        run: npm run build
       - name: Generate jest report
         run: npm test -- --coverage
       - name: SonarCloud Scan
