--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -13,3 +13,5 @@ sonar.projectVersion=1.0
 
 # sonar.projectKey=SonarCloudTest
 # sonar.organization=PersonalOrganization
+
+sonar.javascript.lcov.reportPaths=./coverage/lcov.info
