--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,9 +1,9 @@
-sonar.projectKey=IsaacCisneros95_SonarCloud
-sonar.organization=isaaccisneros95
+sonar.projectKey = IsaacCisneros95_SonarCloud
+sonar.organization = isaaccisneros95
 
 # This is the name and version displayed in the SonarCloud UI.
-sonar.projectName=SonarCloud
-sonar.projectVersion=1.0
+sonar.projectName = SonarCloud
+sonar.projectVersion = 1.0
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 # sonar.sources=.
@@ -14,4 +14,7 @@ sonar.projectVersion=1.0
 # sonar.projectKey=SonarCloudTest
 # sonar.organization=PersonalOrganization
 
-sonar.javascript.lcov.reportPaths=./coverage/lcov.info
+# sonar.coverage.exclusions=
+sonar.sources = lib/
+sonar.tests = test/
+sonar.javascript.lcov.reportPaths = ./coverage/lcov.info
