--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,8 @@
-name: Main
+name: Main workflow
 on:
+  push:
+    branches:
+      - main
   pull_request:
     types: [opened, synchronize, reopened]
 jobs:
@@ -9,9 +12,9 @@ jobs:
       - uses: actions/checkout@v3
       - name: Install dependencies
         run: npm install
-      - name: Build Typescript
+      - name: Build
         run: npm run build
-      - name: Generate jest report
+      - name: Run tests
         run: npm test
   sonarcloud-scan:
     runs-on: ubuntu-latest
@@ -20,9 +23,9 @@ jobs:
       - uses: actions/checkout@v3
       - name: Install dependencies
         run: npm install
-      - name: Build Typescript
+      - name: Build
         run: npm run build
-      - name: Generate jest report
+      - name: Generate jest coverage report
         run: npm test -- --coverage
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master
