Sonarcloud sub branch (#1)
* sonar-cloud implementation

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,13 +1,20 @@
-sonar.projectKey=IsaacCisneros95_SonarCloud
-sonar.organization=isaaccisneros95
+sonar.projectKey = IsaacCisneros95_SonarCloud
+sonar.organization = isaaccisneros95
 
 # This is the name and version displayed in the SonarCloud UI.
-#sonar.projectName=SonarCloud
-#sonar.projectVersion=1.0
+sonar.projectName = SonarCloud
+sonar.projectVersion = 1.0
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-#sonar.sources=.
-#sonar.sources=.
+# sonar.sources=.
 
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
+
+# sonar.projectKey=SonarCloudTest
+# sonar.organization=PersonalOrganization
+
+# sonar.coverage.exclusions=
+sonar.sources = lib/
+sonar.tests = test/
+sonar.javascript.lcov.reportPaths = ./coverage/lcov.info
