workflow and jest config threshold

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,19 +16,9 @@ jobs:
         run: npm run build
       - name: Run tests
         run: npm test
-  sonarcloud-scan:
+  jest-codecoverage:
     runs-on: ubuntu-latest
     needs: build-and-test
     steps:
       - uses: actions/checkout@v3
-      - name: Install dependencies
-        run: npm install
-      - name: Build
-        run: npm run build
-      - name: Generate jest coverage report
-        run: npm test -- --coverage
-      - name: SonarCloud Scan
-        uses: SonarSource/sonarcloud-github-action@master
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      - uses: ArtiomTr/jest-coverage-report-action@v2
